--- a/examples/index.html
+++ b/examples/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Medium Editor Multi-placeholders Plugin Example</title>
-  <link rel="stylesheet" href="../bower_components/medium-editor/dist/css/medium-editor.min.css">
-  <link rel="stylesheet" href="../bower_components/medium-editor/dist/css/themes/default.min.css">
-  <script src="../bower_components/medium-editor/dist/js/medium-editor.min.js"></script>
-  <script src="../dist/medium-editor-multi-placeholders-plugin.min.js"></script>
+  <link rel="stylesheet" href="../bower_components/medium-editor/dist/css/medium-editor.css">
+  <link rel="stylesheet" href="../bower_components/medium-editor/dist/css/themes/default.css">
+  <script src="../bower_components/medium-editor/dist/js/medium-editor.js"></script>
+  <script src="../dist/medium-editor-multi-placeholders-plugin.js"></script>
 </head>
 <body>
   <div id="editor"></div>
@@ -19,6 +19,10 @@
               {
                 tag: 'h1',
                 text: 'Title'
+              },
+              {
+                tag: 'h2',
+                text: 'Tell your story...'
               },
               {
                 tag: 'p',
